# pdd_cidacs_lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
pdd_cidacs_cli/: era5land.py  main.py  teste_nao_eh_meu_token.py
pdd_lib/: bib_pdd_cidacs.py  script.py
