[tool.poetry]
name = "pdd-cidacs-cli"
version = "0.1.0"
description = ""
authors = ["marconso <marconsodehsfilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
click = "^8.1.7"
cdsapi = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
