[tool.poetry]
name = "pdd-lib"
version = "0.1.0"
description = ""
authors = ["marconso <marconsodehsfilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pandas-gbq = "^0.22.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
